--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -141,6 +141,10 @@ jobs:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USERNAME }}
           password: ${{ secrets.SERVER_PASSWORD }}
+          envs: DOCKER_HUB_USERNAME,DOCKER_HUB_TOKEN
+          env:
+            DOCKER_HUB_USERNAME: ${{ secrets.DOCKER_HUB_USERNAME }}
+            DOCKER_HUB_TOKEN: ${{ secrets.DOCKER_HUB_TOKEN }}
           script: |
             echo "SSH connection successful!"
             
@@ -178,6 +182,14 @@ jobs:
             DJANGO_SUPERUSER_PASSWORD=${{ secrets.DJANGO_SUPERUSER_PASSWORD }}
             EOL
             
+            # Update docker-compose.yml to use the correct Docker Hub username
+            sed -i 's/your-dockerhub-username/'${DOCKER_HUB_USERNAME}'/g' docker-compose.yml
+            sed -i 's/${DOCKER_HUB_USERNAME:-your-dockerhub-username}/'${DOCKER_HUB_USERNAME}'/g' docker-compose.yml
+            
+            # Log in to Docker Hub on the server
+            echo "Logging in to Docker Hub..."
+            echo "${DOCKER_HUB_TOKEN}" | docker login -u "${DOCKER_HUB_USERNAME}" --password-stdin
+            
             # Pull the latest images and restart the containers
             echo "Pulling and starting Docker containers..."
             docker-compose pull
@@ -191,23 +203,27 @@ jobs:
         run: |
           echo "Attempting alternative SSH deployment due to previous failure..."
           
-          # Install sshpass if needed for password authentication
+          # Install sshpass for password authentication
           sudo apt-get update && sudo apt-get install -y sshpass expect
           
           # Create remotely executed script with env variables passed securely using printf
-          printf '#!/bin/bash\nset -e\n\necho "SSH connection successful!"\n\n# Verify deployment directory\nDEPLOY_DIR="/root/projects"\nif [ ! -d "$DEPLOY_DIR" ]; then\n  echo "Creating deployment directory..."\n  mkdir -p "$DEPLOY_DIR"\nfi\n\ncd "$DEPLOY_DIR"\n\n# Create the .env file - values will be sent securely via SSH\necho "Creating .env file..."\nmkdir -p backend\ncat > backend/.env << EOL\n# Variables will be populated by secure environment transfer\nEOL\n\necho "Pulling and starting Docker containers..."\ndocker-compose pull\ndocker-compose up -d\n\necho "Deployment completed successfully!"\n' > deploy.sh
-
-          # Using expect script for SCP with password
-          printf '#!/usr/bin/expect -f\nset timeout 30\nset password [lindex $argv 0]\nset host [lindex $argv 1]\nset user [lindex $argv 2]\n\nspawn scp -o StrictHostKeyChecking=no deploy.sh $user@$host:~/deploy.sh\nexpect "password:"\nsend "$password\\r"\nexpect eof\n\n# Run the script with environment variables\nspawn ssh -o StrictHostKeyChecking=no $user@$host "chmod +x ~/deploy.sh && ~/deploy.sh && echo '"'"'Creating secure env file'"'"' && cat > /root/projects/backend/.env << '"'"'EOL'"'"'\nSECRET_KEY='"'"'$env(SECRET_KEY)'"'"'\nDEBUG='"'"'$env(DEBUG)'"'"'\nPOSTGRES_DB='"'"'$env(POSTGRES_DB)'"'"'\nPOSTGRES_USER='"'"'$env(POSTGRES_USER)'"'"'\nPOSTGRES_PASSWORD='"'"'$env(POSTGRES_PASSWORD)'"'"'\nPOSTGRES_HOST=db\nPOSTGRES_PORT=5432\nDJANGO_SUPERUSER_USERNAME='"'"'$env(DJANGO_SUPERUSER_USERNAME)'"'"'\nDJANGO_SUPERUSER_EMAIL='"'"'$env(DJANGO_SUPERUSER_EMAIL)'"'"'\nDJANGO_SUPERUSER_PASSWORD='"'"'$env(DJANGO_SUPERUSER_PASSWORD)'"'"'\nEOL"\nexpect "password:"\nsend "$password\\r"\nexpect eof\n' > scp_script.sh
+          printf '#!/bin/bash\nset -e\n\necho "SSH connection successful!"\n\n# Verify deployment directory\nDEPLOY_DIR="/root/projects"\nif [ ! -d "$DEPLOY_DIR" ]; then\n  echo "Creating deployment directory..."\n  mkdir -p "$DEPLOY_DIR"\nfi\n\ncd "$DEPLOY_DIR"\n\n# Create the .env file with secrets\necho "Creating .env file..."\nmkdir -p backend\ncat > backend/.env << EOL\n# Django environment variables\nSECRET_KEY=%s\nDEBUG=%s\n\n# Database settings\nPOSTGRES_DB=%s\nPOSTGRES_USER=%s\nPOSTGRES_PASSWORD=%s\nPOSTGRES_HOST=db\nPOSTGRES_PORT=5432\n\n# Superuser credentials\nDJANGO_SUPERUSER_USERNAME=%s\nDJANGO_SUPERUSER_EMAIL=%s\nDJANGO_SUPERUSER_PASSWORD=%s\nEOL\n\n# Update docker-compose.yml to use the correct Docker Hub username\nsed -i '"'"'s/your-dockerhub-username/%s/g'"'"' docker-compose.yml\nsed -i '"'"'s/\\\${DOCKER_HUB_USERNAME:-your-dockerhub-username}/%s/g'"'"' docker-compose.yml\n\n# Log in to Docker Hub\necho "Logging in to Docker Hub..."\necho "%s" | docker login -u "%s" --password-stdin\n\necho "Pulling and starting Docker containers..."\ndocker-compose pull\ndocker-compose up -d\n\necho "Deployment completed successfully!"\n' \
+          "${{ secrets.DJANGO_SECRET_KEY }}" \
+          "${{ secrets.DEBUG }}" \
+          "${{ secrets.POSTGRES_DB }}" \
+          "${{ secrets.POSTGRES_USER }}" \
+          "${{ secrets.POSTGRES_PASSWORD }}" \
+          "${{ secrets.DJANGO_SUPERUSER_USERNAME }}" \
+          "${{ secrets.DJANGO_SUPERUSER_EMAIL }}" \
+          "${{ secrets.DJANGO_SUPERUSER_PASSWORD }}" \
+          "${{ secrets.DOCKER_HUB_USERNAME }}" \
+          "${{ secrets.DOCKER_HUB_USERNAME }}" \
+          "${{ secrets.DOCKER_HUB_TOKEN }}" \
+          "${{ secrets.DOCKER_HUB_USERNAME }}" > deploy.sh
+          
+          # Create expect script to send the deployment script and execute it
+          printf '#!/usr/bin/expect -f\nset timeout 30\nset password [lindex $argv 0]\nset host [lindex $argv 1]\nset user [lindex $argv 2]\n\n# Copy the script\nspawn scp -o StrictHostKeyChecking=no deploy.sh $user@$host:~/deploy.sh\nexpect "password:"\nsend "$password\\r"\nexpect eof\n\n# Execute the script\nspawn ssh -o StrictHostKeyChecking=no $user@$host "chmod +x ~/deploy.sh && ~/deploy.sh"\nexpect "password:"\nsend "$password\\r"\nexpect eof\n' > scp_script.sh
           
           chmod +x scp_script.sh
-          export SECRET_KEY="${{ secrets.DJANGO_SECRET_KEY }}"
-          export DEBUG="${{ secrets.DEBUG }}"
-          export POSTGRES_DB="${{ secrets.POSTGRES_DB }}"
-          export POSTGRES_USER="${{ secrets.POSTGRES_USER }}"
-          export POSTGRES_PASSWORD="${{ secrets.POSTGRES_PASSWORD }}"
-          export DJANGO_SUPERUSER_USERNAME="${{ secrets.DJANGO_SUPERUSER_USERNAME }}"
-          export DJANGO_SUPERUSER_EMAIL="${{ secrets.DJANGO_SUPERUSER_EMAIL }}"
-          export DJANGO_SUPERUSER_PASSWORD="${{ secrets.DJANGO_SUPERUSER_PASSWORD }}"
           ./scp_script.sh "${{ secrets.SERVER_PASSWORD }}" "${{ secrets.SERVER_HOST }}" "${{ secrets.SERVER_USERNAME }}" || echo "Alternative deployment failed, but continuing workflow"
 
