--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,11 +45,8 @@ services:
       - "8001:80"
     depends_on:
       - backend
-    environment:
-      - REACT_APP_API_URL=https://prompt-back.aminseifi.com/api
-      - REACT_APP_PRODUCTION_API_URL=https://prompt-back.aminseifi.com/api
-      - REACT_APP_ENVIRONMENT=production
-      - REACT_APP_USE_MOCK_DATA=false
+    env_file:
+      - ./frontend/.env
     restart: unless-stopped
     networks:
       - prompt-network
